--- a/BitcoinPKArrayScrambleWorker/BitcoinPKArrayScrambleWorker.csproj
+++ b/BitcoinPKArrayScrambleWorker/BitcoinPKArrayScrambleWorker.csproj
@@ -4,9 +4,11 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="*"/>
-    <PackageReference Include="System.Diagnostics.Debug" Version="*"/>
-    <PackageReference Include="Olimpo.RedisProvider" Version="*"/>
-    <PackageReference Include="StackExchange.Redis" Version="*"/>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="*" />
+    <PackageReference Include="System.Diagnostics.Debug" Version="*" />
+    <PackageReference Include="MongoDB.Driver" Version="*" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MongoDbQueueService\MongoDbQueueService.csproj" />
   </ItemGroup>
 </Project>
