Use the configuration and prepare to be injected

--- a/BitcoinPKArrayScrambleWorker/appsettings.json
+++ b/BitcoinPKArrayScrambleWorker/appsettings.json
@@ -1,5 +1,9 @@
 {
-    "workerName": "WORKER_1",
+    "workerSettings": {
+        "workerName": "WORKER_1",
+        "connectionString": "mongodb://localhost:27017",
+        "database": "PkGenerators"
+    },
 
     "subscriberSettings": {
         "connectionString": "mongodb://localhost:27017",
