Add WorkerDetails when the worker starts

--- a/BitcoinPKArrayScrambleWorker/appsettings.json
+++ b/BitcoinPKArrayScrambleWorker/appsettings.json
@@ -1,5 +1,5 @@
 {
-    "workerSettings": {
+    "workerLiveCycleSettings": {
         "workerName": "WORKER_1",
         "connectionString": "mongodb://localhost:27017",
         "database": "PkGenerators"
@@ -8,7 +8,8 @@
     "subscriberSettings": {
         "connectionString": "mongodb://localhost:27017",
         "database": "PkGenerators",
-        "queue": "BitcoinPkArrayGenerator"
+        "queue": "BitcoinPkArrayGenerator",
+        "workerName": "WORKER_1"
     },
 
     "publisherSettings": {
