--- a/WorkerUtilitiesService/WorkerUtilitiesService.csproj
+++ b/WorkerUtilitiesService/WorkerUtilitiesService.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="*" />
+    <PackageReference Include="MongoDB.Driver" Version="*"/>
+    <PackageReference Include="System.Reactive.Linq" Version="*"/>
+  </ItemGroup>
+
 </Project>
